tests/api/reference/negative/10-join-non-string.asm
const invalid: string = join(list.of("a", 1), ",")
